#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#--------------------------------------------------------------------------------
# miRanda- An miRNA target scanner, aims to predict mRNA targets for microRNAs,
# using dynamic-programming alignment and thermodynamics
#
# Copyright (C) (2003) Memorial Sloan-Kettering Cancer Center, New York
#
# Distributed under the GNU Public License (GPL)
# See the files 'COPYING' and 'LICENSE' for details
#
# Authors: Anton Enright, Bino John, Chris Sander and Debora Marks
# Email: mirnatargets (at) cbio.mskcc.org - reaches all authors
#
# Written By: Anton Enright
#
# Please send bug reports to: miranda (at) cbio.mskcc.org
#
# If you use miRanda in your research please cite:
# Enright AJ, John B, Gaul U, Tuschl T, Sander C and Marks DS;
# (2003) Genome Biology; 5(1):R1.
#
# This software will be further developed under the open source model,
# coordinated by Anton Enright and Chris Sander:
# miranda (at) cbio.mskcc.org (reaches both).
#--------------------------------------------------------------------------------
#
# Copyright (C) (2003) Memorial Sloan-Kettering Cancer Center
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

AC_PREREQ(2.60)
AC_INIT(miRanda, 3.3a, miranda {at} cbio.mskcc.org)
AC_CONFIG_SRCDIR([RNAlib])
AC_CONFIG_HEADER([config.h])
AC_SUBST(VERSION)
ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)
AM_INIT_AUTOMAKE
AC_CANONICAL_HOST

# Checks for programs.
AC_PROG_CC
if test "$GCC" = yes; then
   AC_DEFINE(UNUSED, __attribute__ ((unused)), avoid warning about unused variables)
else
   AC_DEFINE(UNUSED,, only for gcc)
fi
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h limits.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS([memset sqrt strchr strdup strrchr strstr])

AC_CONFIG_FILES([Makefile
                 RNAlib/H/Makefile
                 RNAlib/Makefile
                 man/Makefile
                 src/Makefile])
AC_OUTPUT
